...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

    <com.google.android.material.appbar.AppBarLayout
        app:elevation="0dp"
        android:id="@+id/appbar_home"
        android:layout_width="match_parent"
        android:layout_height="350dp">
        <TextView
            android:id="@+id/popular_text"
            android:textSize="20sp"
            android:padding="16dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/rv_banner_popular"
            app:layout_scrollFlags="scroll"
            app:layout_constraintTop_toBottomOf="@id/popular_text"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
...
