<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/favorite_fragment"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.FavoriteFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:tint="@color/primaryColor"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/favorite"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_fav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>